--- a/style.less
+++ b/style.less
@@ -20,18 +20,20 @@ a{
 
 
 .btnUp{
-    display: none;
-    width: 80px;
-    height: 80px;
+    display: block;
+    width: 60px;
+    height: 60px;
     line-height: 100px;
     border-radius: 50%;
     text-align: center;
+    opacity: 0;
 
     background-color:#458FF6;
     color: #ffffff;
     position: fixed;
     right: 5%;
     bottom: 5%;
+    transition: background-color linear 0.3s, opacity linear 0.3s;
     &:hover{
         background-color: #ff4d36;
     }
